--- a/index.html
+++ b/index.html
@@ -1,120 +1,168 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>TurkuazCore • v13 Web</title>
 
 <style>
     body {
+        font-family: Arial, sans-serif;
+        background: #f4f7f9;
         margin: 0;
         padding: 0;
-        font-family: Arial, sans-serif;
-        background: #eef7f9;
     }
 
-    header {
-        background: #0ab5d5;
-        color: white;
-        padding: 15px;
-        text-align: center;
-        font-size: 22px;
-        font-weight: bold;
+    #app {
+        max-width: 900px;
+        margin: auto;
+        padding: 20px;
     }
 
-    #chat-box {
-        height: 68vh;
+    #chatBox {
+        height: 75vh;
         overflow-y: auto;
+        border: 1px solid #ccc;
         padding: 15px;
-    }
-
-    .ai-msg {
-        background: #d3f5ff;
-        color: #004a57;
-        padding: 10px 14px;
         border-radius: 10px;
-        margin: 8px 0;
-        width: fit-content;
-        max-width: 80%;
-    }
-
-    .user-msg {
         background: white;
-        color: black;
-        padding: 10px 14px;
+    }
+
+    .msg-user {
+        text-align: right;
+        margin: 10px 0;
+    }
+
+    .msg-user span {
+        background: #d1e7ff;
+        padding: 10px;
         border-radius: 10px;
-        margin: 8px 0;
-        width: fit-content;
-        max-width: 80%;
-        margin-left: auto;
+        display: inline-block;
+    }
+
+    .msg-ai {
+        text-align: left;
+        margin: 10px 0;
+    }
+
+    .msg-ai span {
+        background: #b9f3f3;
+        padding: 10px;
+        border-radius: 10px;
+        display: inline-block;
     }
 
     #bottom-bar {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        background: white;
-        padding: 10px;
+        margin-top: 10px;
         display: flex;
-        gap: 8px;
-        border-top: 1px solid #ccc;
+        gap: 10px;
     }
 
     #textInput {
         flex: 1;
         padding: 10px;
-        border: 1px solid #bbb;
+        font-size: 16px;
         border-radius: 8px;
+        border: 1px solid #999;
     }
 
-    #sendBtn, #uploadBtn {
-        padding: 10px 14px;
+    #sendBtn {
+        padding: 10px 18px;
+        background: #16a6a6;
         border: none;
-        border-radius: 8px;
-        background: #0ab5d5;
         color: white;
         font-weight: bold;
-        cursor: pointer;
+        border-radius: 8px;
     }
 </style>
-
 </head>
+
 <body>
+<div id="app">
+    <h2>TurkuazCore • v13 Web</h2>
 
-<header>TurkuazCore • v13 Web</header>
+    <div id="chatBox"></div>
 
-<div id="chat-box"></div>
-
-<div id="bottom-bar">
-    <input type="file" id="uploadBtn" accept="image/*">
-    <input type="text" id="textInput" placeholder="Bir mesaj yaz...">
-    <button id="sendBtn">Gönder</button>
+    <div id="bottom-bar">
+        <input id="textInput" type="text" placeholder="Mesaj yaz..." />
+        <button id="sendBtn">Gönder</button>
+    </div>
 </div>
 
 <script>
-    const chatBox = document.getElementById("chat-box");
-    const textInput = document.getElementById("textInput");
-    const sendBtn = document.getElementById("sendBtn");
+/* ——————————————————————————————
+   ✔ Gemini 2.0 Flash API BAĞLANTISI
+—————————————————————————————— */
 
-    function addMessage(text, sender) {
-        const msg = document.createElement("div");
-        msg.className = sender === "user" ? "user-msg" : "ai-msg";
-        msg.innerText = text;
-        chatBox.appendChild(msg);
-        chatBox.scrollTop = chatBox.scrollHeight;
+const API_KEY = "AIzaSyBeUAhW71Za-GSOHvsXdDzeIJKpPCp0CiE";
+
+async function sendToGemini(message) {
+    try {
+        const response = await fetch(
+            "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=" + API_KEY,
+            {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    contents: [
+                        {
+                            role: "user",
+                            parts: [{ text: message }]
+                        }
+                    ]
+                })
+            }
+        );
+
+        const data = await response.json();
+        if (data?.candidates?.[0]?.content?.parts?.[0]?.text) {
+            return data.candidates[0].content.parts[0].text;
+        } else {
+            return "⚠️ Gemini'den beklenmeyen bir yanıt geldi.";
+        }
+
+    } catch (err) {
+        return "❌ Bağlantı hatası: " + err;
     }
+}
 
-    sendBtn.onclick = () => {
-        if (textInput.value.trim() === "") return;
-        addMessage(textInput.value, "user");
+/* ——————————————————————————————
+   ✔ Mesaj ekleme fonksiyonu
+—————————————————————————————— */
 
-        // Şimdilik AI cevabı simülasyon — yarın gerçek bağlantı eklenecek
-        setTimeout(() => {
-            addMessage("📌 Mesaj alındı. Yarın Gemini + 17 Kriter motoru bağlanacak!", "ai");
-        }, 700);
+function addMessage(text, sender = "ai") {
+    const box = document.getElementById("chatBox");
+    const div = document.createElement("div");
+    div.className = sender === "user" ? "msg-user" : "msg-ai";
 
-        textInput.value = "";
-    };
+    const span = document.createElement("span");
+    span.innerText = text;
+    div.appendChild(span);
+
+    box.appendChild(div);
+    box.scrollTop = box.scrollHeight;
+}
+
+/* ——————————————————————————————
+   ✔ Gönder butonu
+—————————————————————————————— */
+
+document.getElementById("sendBtn").onclick = async () => {
+    const input = document.getElementById("textInput");
+    const msg = input.value.trim();
+    if (!msg) return;
+
+    addMessage(msg, "user");
+    input.value = "";
+
+    // Typing animasyonu
+    addMessage("⏳ Yazıyor...", "ai");
+    const loadingBubble = document.querySelector(".msg-ai span:last-child");
+
+    const reply = await sendToGemini(msg);
+
+    loadingBubble.innerText = reply;
+};
 </script>
 
 </body>
