--- a/index.html
+++ b/index.html
@@ -1,167 +1,189 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>TurkuazCore • v13 Web</title>
-
-<style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TurkuazCore • v13 Web</title>
+  <style>
     body {
-        font-family: Arial, sans-serif;
-        background: #f4f7f9;
-        margin: 0;
-        padding: 0;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #eaf3f7;
     }
 
-    #app {
-        max-width: 900px;
-        margin: auto;
-        padding: 20px;
+    /* Şifre ekranı */
+    #auth-screen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: #eaf3f7;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
 
-    #chatBox {
-        height: 75vh;
-        overflow-y: auto;
-        border: 1px solid #ccc;
-        padding: 15px;
-        border-radius: 10px;
-        background: white;
+    #auth-box {
+      background: white;
+      padding: 25px;
+      border-radius: 12px;
+      width: 85%;
+      max-width: 350px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      text-align: center;
     }
 
-    .msg-user {
-        text-align: right;
-        margin: 10px 0;
+    #auth-box input {
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
 
-    .msg-user span {
-        background: #d1e7ff;
-        padding: 10px;
-        border-radius: 10px;
-        display: inline-block;
+    #auth-box button {
+      margin-top: 12px;
+      width: 100%;
+      padding: 12px;
+      background: #009688;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      font-size: 16px;
     }
 
-    .msg-ai {
-        text-align: left;
-        margin: 10px 0;
+    /* Chat UI */
+    #chat-app { display: none; padding: 20px; }
+    h1 { color: #000; font-size: 26px; }
+
+    #chat-box {
+      background:white;
+      width: 100%;
+      height: 65vh;
+      border-radius: 12px;
+      padding: 12px;
+      overflow-y: auto;
+      margin-bottom: 15px;
     }
 
-    .msg-ai span {
-        background: #b9f3f3;
-        padding: 10px;
-        border-radius: 10px;
-        display: inline-block;
+    .msg {
+      padding: 10px 14px;
+      border-radius: 10px;
+      max-width: 80%;
+      margin-bottom: 10px;
+      width: fit-content;
     }
 
-    #bottom-bar {
-        margin-top: 10px;
-        display: flex;
-        gap: 10px;
+    .user {
+      background: #d1efff;
+      margin-left: auto;
+    }
+
+    .ai {
+      background: #c8f7e6;
+      margin-right: auto;
+    }
+
+    #input-area {
+      display: flex;
+      gap: 10px;
     }
 
     #textInput {
-        flex: 1;
-        padding: 10px;
-        font-size: 16px;
-        border-radius: 8px;
-        border: 1px solid #999;
+      flex-grow: 1;
+      padding: 12px;
+      border-radius: 10px;
+      border: 1px solid #999;
     }
 
     #sendBtn {
-        padding: 10px 18px;
-        background: #16a6a6;
-        border: none;
-        color: white;
-        font-weight: bold;
-        border-radius: 8px;
+      background: #009688;
+      color: white;
+      padding: 12px 18px;
+      border-radius: 10px;
+      border: none;
+      font-weight: bold;
     }
-</style>
+  </style>
 </head>
 
 <body>
-<div id="app">
-    <h2>TurkuazCore • v13 Web</h2>
 
-    <div id="chatBox"></div>
+<!-- 🔐 ŞİFRE EKRANI -->
+<div id="auth-screen">
+  <div id="auth-box">
+    <h2>Giriş Yap</h2>
+    <p>Şifreyi girin</p>
+    <input type="password" id="passwordInput" placeholder="Şifre">
+    <button onclick="checkPassword()">Giriş</button>
+    <p id="auth-error" style="color:red; display:none; margin-top:10px;">
+      ❌ Hatalı şifre!
+    </p>
+  </div>
+</div>
 
-    <div id="bottom-bar">
-        <input id="textInput" type="text" placeholder="Mesaj yaz..." />
-        <button id="sendBtn">Gönder</button>
-    </div>
+<!-- 💬 CHAT UYGULAMASI -->
+<div id="chat-app">
+  <h1>TurkuazCore • v13 Web</h1>
+
+  <div id="chat-box"></div>
+
+  <div id="input-area">
+    <input id="textInput" type="text" placeholder="Mesaj yaz...">
+    <button id="sendBtn">Gönder</button>
+  </div>
 </div>
 
 <script>
-/* ——————————————————————————————
-   ✔ Gemini 2.0 Flash API BAĞLANTISI
-—————————————————————————————— */
+/* =======================
+     🔐 ŞİFRE DOĞRULAMA
+   =======================*/
 
-const API_KEY = "AIzaSyBeUAhW71Za-GSOHvsXdDzeIJKpPCp0CiE";
+// Şifreyi kod içinde AES benzeri basit obfuscation ile saklıyoruz
+const encodedPassword = "dGxnYTE5NzA="; // Base64 → "tlga1970"
 
-async function sendToGemini(message) {
-    try {
-        const response = await fetch(
-            "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=" + API_KEY,
-            {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    contents: [
-                        {
-                            role: "user",
-                            parts: [{ text: message }]
-                        }
-                    ]
-                })
-            }
-        );
+function checkPassword() {
+  const input = document.getElementById("passwordInput").value;
+  const decoded = atob(encodedPassword);
 
-        const data = await response.json();
-        if (data?.candidates?.[0]?.content?.parts?.[0]?.text) {
-            return data.candidates[0].content.parts[0].text;
-        } else {
-            return "⚠️ Gemini'den beklenmeyen bir yanıt geldi.";
-        }
-
-    } catch (err) {
-        return "❌ Bağlantı hatası: " + err;
-    }
+  if (input === decoded) {
+    document.getElementById("auth-screen").style.display = "none";
+    document.getElementById("chat-app").style.display = "block";
+  } else {
+    document.getElementById("auth-error").style.display = "block";
+  }
 }
 
-/* ——————————————————————————————
-   ✔ Mesaj ekleme fonksiyonu
-—————————————————————————————— */
+/* =======================
+       💬 CHAT ÇEKİRDEĞİ
+   =======================*/
 
-function addMessage(text, sender = "ai") {
-    const box = document.getElementById("chatBox");
-    const div = document.createElement("div");
-    div.className = sender === "user" ? "msg-user" : "msg-ai";
+function addMessage(text, sender) {
+  const chatBox = document.getElementById("chat-box");
 
-    const span = document.createElement("span");
-    span.innerText = text;
-    div.appendChild(span);
+  const msg = document.createElement("div");
+  msg.classList.add("msg");
+  msg.classList.add(sender);
+  msg.innerText = text;
 
-    box.appendChild(div);
-    box.scrollTop = box.scrollHeight;
+  chatBox.appendChild(msg);
+  chatBox.scrollTop = chatBox.scrollHeight;
 }
 
-/* ——————————————————————————————
-   ✔ Gönder butonu
-—————————————————————————————— */
+// Gönder butonu
+document.getElementById("sendBtn").onclick = () => {
+  const input = document.getElementById("textInput");
 
-document.getElementById("sendBtn").onclick = async () => {
-    const input = document.getElementById("textInput");
-    const msg = input.value.trim();
-    if (!msg) return;
+  if (input.value.trim() === "") return;
 
-    addMessage(msg, "user");
-    input.value = "";
+  addMessage(input.value, "user");
 
-    // Typing animasyonu
-    addMessage("⏳ Yazıyor...", "ai");
-    const loadingBubble = document.querySelector(".msg-ai span:last-child");
+  setTimeout(() => {
+    addMessage("📌 Mesaj alındı. Gemini bağlantısı ekleniyor...", "ai");
+  }, 600);
 
-    const reply = await sendToGemini(msg);
-
-    loadingBubble.innerText = reply;
+  input.value = "";
 };
 </script>
 
